# group-5

./: .gitignore  Cargo.toml  README.md  audio.json  display.json  end_screen_scene.json  game.json  lobby_scene.json  models.json  particles.json  physics.json  player.json  relink_mtl.py  scene.json  tex.json
.github/workflows/: ci.yml
assets/: ferris.mtl  flag_field.mtl  grass_1.mtl  grass_2.mtl  grass_3.mtl  ice_cube.mtl  island.mtl  islands_set.mtl  islands_set_final.mtl  islands_set_final_all_decorations.mtl  islands_set_flat.mtl  islands_set_low_fi.mtl  islands_set_remade.mtl  korok_texture_lib.mtl  lantern.mtl  refill.mtl
assets/korok/: desc.json  korok_texture_lib.mtl
assets/korok/attack/: frame_0001.mtl
assets/korok/jump/: frame_0040.mtl  korok17.mtl
assets/korok_2/: desc.json
assets/korok_3/: desc.json
assets/korok_4/: desc.json
client/: Cargo.toml  build.rs
client/misc/: session_data.txt
client/res/: TexturesCom_Flower_Chamomile_4K_alpha.tif  ferris.mtl  islands_set_landscape.mtl  untitled.mtl
client/src/: 2d_shader.wgsl  3d_shader.wgsl  animation.rs  audio.rs  camera.rs  context.rs  event_loop.rs  instance.rs  lib.rs  lights.rs  load_objects.rs  main.rs  mesh_color.rs  model.rs  node.rs  objects.rs  other_players.rs  particle_shader.wgsl  particles.rs  player.rs  resources.rs  scene.rs  screen_objects.rs  shader.wgsl  texture.rs  user_input.rs
client/src/inputs/: handlers.rs  mod.rs
client/src/particles/: constants.rs  gen.rs  mod.rs  particle_shader.wgsl  ribbon.rs  trail.rs
client/src/screen/: config.rs  display_config.rs  display_config_helper.rs  display_helper.rs  location.rs  location_helper.rs  mod.rs  object_transitions.rs  objects.rs  objects_config.rs  screen_objects  screen_objects_old.rs  texture_config.rs  texture_config_helper.rs  texture_config_impl.rs  texture_helper.rs  ui_interaction.rs
client/src/skybox/: constants.rs  mod.rs  skybox_shader.wgsl
common/: Cargo.toml
common/src/: lib.rs  map_config.rs
common/src/communication/: Utils.rs  commons.rs  message.rs  mod.rs  request.rs  response.rs
common/src/configs/: audio_config.rs  constants.rs  display_config.rs  game_config.rs  map_config.rs  mod.rs  model_config.rs  parameters.rs  particle_config.rs  physics_config.rs  player_config.rs  scene_config.rs  texture_config.rs
common/src/core/: action_states.rs  choices.rs  command.rs  components.rs  events.rs  mesh_color.rs  mod.rs  powerup_system.rs  states.rs  weather.rs
common/src/utils/: file_cache.rs  mod.rs
server/: Cargo.toml
server/src/: client_handler.rs  debug_client.rs  executor.rs  game_loop.rs  lib.rs  main.rs  outgoing_request.rs  thread_pool.rs
server/src/executor/: command_handlers.rs  mod.rs
server/src/executor/command_handlers/: area_attack.rs  attack.rs  cast_powerup.rs  cheat_code.rs  cheat_code_control.rs  dash.rs  die.rs  flash.rs  give_powerup.rs  jump.rs  mod.rs  movement.rs  prelude.rs  refill.rs  spawn.rs  startup.rs  status.rs  update_camera_facing.rs  wave.rs  weather.rs  weather_cheat_key.rs
server/src/simulation/: entity.rs  mod.rs  obj_collider.rs  physics_state.rs
