[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3.0"
queues = "1.0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
nalgebra-glm = "0.3"
instant = "0.1.12"
tobj = { version = "3.2.1", features = [
    "async",
]}
anyhow = "1.0"
cfg-if = "1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

