[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "2.6.0"
serde_json = "1.0" # for testing purpose, use more efficient serializer later
byteorder = "1.3.4"
structopt = "0.3.14"
env_logger = "0.10.0"
rapier3d = { version = "0.17.2", features = ["simd-stable", "serde-serialize"] }
log = "0.4.14"
derive_more = "0.99"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }