[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.14"
glam = "0.23.0"
bus = "2.4.0"
serde_json = "1.0"
threadpool = "1.0"
clap = {version = "4.2.2",  features = ["derive"]}

[[bin]]
name = "debug_client"
path = "src/debug_client.rs"
