[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.14"
glam = "0.23.0"
bus = "2.4.0"
serde_json = "1.0"
threadpool = "1.0"
clap = {version = "4.2.2",  features = ["derive"]}
rapier3d = { version = "0.17.2", features = ["simd-stable", "serde-serialize"] }
derive_more = "0.99.17"
nalgebra = { version = "0.32.2", features = ["convert-glam023"] }
tobj = "3.2.5"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "debug_client"
path = "src/debug_client.rs"

