[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.14"
glam = "0.24.0"
bus = "2.4.0"
serde_json = "1.0"
threadpool = "1.0"
clap = {version = "4.2.2",  features = ["derive"]}
rapier3d = { version = "0.17.2", features = ["simd-stable", "serde-serialize"] }
derive_more = "0.99.17"
nalgebra = { version = "0.32.2", features = ["convert-glam023"] }
tobj = "4.0.0"
nalgebra-glm = "0.18.0"
rand = "0.8.4"
itertools = "0.10.5"
bincode = "1.3.3"
once_cell = "1.17.1"

[dev-dependencies]
approx = "0.5.1"

[features]
prod = []
debug = ["debug-addr", "debug-ready-sync"]
debug-addr = []
debug-ready-sync = []